--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-validator": "^0.14.3",
     "pg": "^8.17.2",
     "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.2",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.28"
   },
